<resources>
    <string name="app_name">BD_Map</string>
    <string name="action_settings">Settings</string>
    <string name="map_type_normal">普通地图</string>
    <string name="map_type_satellite">卫星地图</string>
    <string name="setting">设置</string>
    <string name="start_location">开启定位</string>
    <string name="stop_location">关闭定位</string>
    <string name="search_around">周边搜索</string>
    <string name="confirm">确定</string>
    <string name="what">附近有什么...</string>
    <string name="go_to_where">去哪里</string>
    <string name="im_here">在这里</string>
    <string name="origin">起点</string>
    <string name="terminal">终点</string>
    <string name="walk">步行路线</string>
    <string name="bus">公交路线</string>

</resources>
