<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_here"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/origin"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:background="@drawable/edt_bg">

            <EditText
                android:id="@+id/edt_here"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/im_here" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/txt_there"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/terminal"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:background="@drawable/edt_bg">

            <EditText
                android:id="@+id/edt_there"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/go_to_where" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_walk"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/txt_sel"
        android:gravity="center"
        android:text="@string/walk"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txt_bus"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/txt_sel"
        android:gravity="center"
        android:text="@string/bus"
        android:textColor="@android:color/white" />


</LinearLayout>
